baml_language/crates/baml_tests/snapshots/compiles/reflect_type_of_user_generic/baml_tests__compiles__reflect_type_of_user_generic__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Person {
  name: string
}
function user.from_json(j: baml.json.json) -> user.Person  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.reflect_array() -> type  [expr] {
  {  } reflect.type_of()
}
function user.reflect_int_array() -> type  [expr] {
  {  } reflect_array()
}
function user.reflect_person() -> type  [expr] {
  {  } reflect_type()
}
function user.reflect_type() -> type  [expr] {
  {  } reflect.type_of()
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
