baml_language/crates/baml_tests/snapshots/compiles/reflect_type_of_user_generic/baml_tests__compiles__reflect_type_of_user_generic__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 22914
---
=== PPIR ===
class user.Person {
  name: string
}
class user.Person$stream {
  name: string | null
}
function user.reflect_array() -> type  [expr] {
  {  } type.of()
}
function user.reflect_int_array() -> type  [expr] {
  {  } reflect_array()
}
function user.reflect_person() -> type  [expr] {
  {  } reflect_type()
}
function user.reflect_type() -> type  [expr] {
  {  } type.of()
}
