baml_language/crates/baml_tests/snapshots/compiles/reflect_type_of_user_generic/baml_tests__compiles__reflect_type_of_user_generic__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Person {
  name: string
}
function user.reflect_type<T>() -> type throws never {
  { : type
    reflect.type_of() : type
  }
}
function user.reflect_array<T>() -> type throws never {
  { : type
    reflect.type_of() : type
  }
}
function user.reflect_person() -> type throws never {
  { : type
    reflect_type() : type
  }
}
function user.reflect_int_array() -> type throws never {
  { : type
    reflect_array() : type
  }
}
class user.Person$stream {
  name: null | string
}
