baml_language/crates/baml_tests/snapshots/compiles/reflect_type_of_user_generic/baml_tests__compiles__reflect_type_of_user_generic__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Person.from_json(j: baml.json.json) -> Person {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Person
    load_var _2
    call baml.json.from_string
    return
}

function user.Person.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .name
    call baml.String.to_json
    load_const "name"
    alloc_map 1
    return
}

function user.reflect_array() -> type {
    load_type #0[]
    return
}

function user.reflect_int_array() -> type {
    load_type int
    call user.reflect_array
    return
}

function user.reflect_person() -> type {
    load_type Person
    call user.reflect_type
    return
}

function user.reflect_type() -> type {
    load_type #0
    return
}
